feat: add categories crud
