# docs/swagger.json
@@ -101,6 +101,12 @@
                         "description": "Sort order (asc/desc)",
                         "name": "order",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "A category name to filter by",
+                        "name": "name",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -224,6 +230,68 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update a category",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "categories"
+                ],
+                "summary": "Update Category By ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "category ID",
+                        "name": "category_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Category payload",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/categories.UpdateCategoryRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Category updated",
+                        "schema": {
+                            "$ref": "#/definitions/categories.UpdateCategoryResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
             }
         },
         "/categories/{period}": {
@@ -251,6 +319,38 @@
                         "name": "period",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Items per page",
+                        "name": "per_page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "name",
+                        "description": "Sort field",
+                        "name": "sort",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "asc",
+                            "desc"
+                        ],
+                        "type": "string",
+                        "default": "asc",
+                        "description": "Sort order (asc/desc)",
+                        "name": "order",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -613,9 +713,6 @@
         "categories.CategoryAmountPerPeriod": {
             "type": "object",
             "properties": {
-                "amount": {
-                    "type": "integer"
-                },
                 "color": {
                     "type": "string"
                 },
@@ -627,6 +724,9 @@
                 },
                 "period": {
                     "type": "string"
+                },
+                "total_amount": {
+                    "type": "number"
                 },
                 "user_id": {
                     "type": "string"
@@ -691,6 +791,9 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/categories.ListCategoryAmountPerPeriodResponseData"
+                },
+                "query": {
+                    "$ref": "#/definitions/utils.QueryMeta"
                 }
             }
         },
@@ -702,6 +805,33 @@
                     "items": {
                         "$ref": "#/definitions/categories.CategoryAmountPerPeriod"
                     }
+                }
+            }
+        },
+        "categories.UpdateCategoryRequest": {
+            "type": "object",
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "categories.UpdateCategoryResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/categories.UpdateCategoryResponseData"
+                }
+            }
+        },
+        "categories.UpdateCategoryResponseData": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "$ref": "#/definitions/categories.Category"
                 }
             }
         },
@@ -754,6 +884,9 @@
                 "total_installments"
             ],
             "properties": {
+                "category_id": {
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -874,6 +1007,15 @@
             "properties": {
                 "amount": {
                     "type": "number"
+                },
+                "category_color": {
+                    "type": "string"
+                },
+                "category_id": {
+                    "type": "string"
+                },
+                "category_name": {
+                    "type": "string"
                 },
                 "created_at": {
                     "type": "string"
